--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "component.shine.com.basemoudle"
-        minSdkVersion 24
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,6 +21,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    greendao {
+        schemaVersion 1  //版本号
+    }
+
 }
 
 dependencies {
@@ -32,5 +37,8 @@ dependencies {
 
     implementation("com.squareup.okhttp3:okhttp:3.14.2")//okhttp3
     implementation 'org.nanohttpd:nanohttpd:2.2.0'//轻量级http服务器nanohttpd
-
+    implementation 'org.greenrobot:greendao:3.2.2'
+    //stetho 调试工具 测试用
+    implementation 'com.facebook.stetho:stetho:1.4.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
 }
