--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     //stetho 调试工具 测试用
     implementation 'com.facebook.stetho:stetho:1.4.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.4.1'
+    //JakeWharton/timber 日志打印
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
