--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     
     repositories {
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
+
         mavenCentral()
         google()
         jcenter()
@@ -19,6 +21,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
         google()
         jcenter()
